deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockerfirst
  labels:
    app: dockerfirst
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dockerfirst
  template:
    metadata:
      labels:
        app: dockerfirst
    spec:
      containers:
        - name: dockerfirst
          image: ruskasymov/dockerfirst:latest  # Указан твой образ
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
