service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dockerfirst
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30080
  selector:
    app: dockerfirst
